--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lamax - Регистрация</title>
-    <link rel="stylesheet" href="auth.css">
+    <link rel="stylesheet" href="/views/css/auth.css">
 </head>
 <body>
 <div class="logo">💬</div>
